<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ConverterApp</string>
    <string name="converter">Converter</string>
    <string name="conversion_name">Conversion Type:</string>
    <string name="choose">Choose</string>
    <string name="enter_a_value">Enter a value</string>
    <string name="converted_value">Result</string>
    <string name="swap">Swap</string>
    <string name="convert1">Convert</string>
    <string name="clear">Clear</string>
    <string-array name="conversion_type">
        <item>Temperature</item>
        <item>Weight</item>
        <item>Length</item>
    </string-array>

    <string-array name="temperature">
        <item>Kelvin</item>
        <item>Fahrenheit</item>
        <item>Celsius</item>
    </string-array>

    <string-array name="weight">
        <item>Kilogram</item>
        <item>Pound</item>
    </string-array>

    <string-array name="length">
        <item>Foot</item>
        <item>Meter</item>
        <item>Mile</item>
    </string-array>
</resources>
