<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2C3A52"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="20dp"
        android:background="#0962A3"
        android:fontFamily="@font/chelaone"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/converter"
        android:textColor="#AAC9E9"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:gravity="center|start"
            android:text="@string/conversion_name"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="#AAC9E9"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/ConversionTypeId"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:gravity="center|end"
            android:layout_gravity="center|end">

        </Spinner>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <EditText
            android:id="@+id/EditTextId"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:gravity="center|start"
            android:hint="@string/enter_a_value"
            android:padding="10dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="#AAC9E9"
            android:textColorHint="#8DAAC9E9"
            android:inputType="numberDecimal"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/Spinner2Id"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:gravity="center|end"
            android:layout_gravity="center|end">

        </Spinner>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <TextView
            android:id="@+id/TextViewId"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:gravity="center|start"
            android:hint="@string/converted_value"
            android:padding="10dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="#AAC9E9"
            android:textColorHint="#8DAAC9E9"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/Spinner3Id"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:gravity="center|end"
            android:layout_gravity="center|end">

        </Spinner>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="70dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/SwapId"
            android:layout_margin="20dp"
            android:background="@drawable/btn_style"
            android:text="@string/swap"
            android:textColor="#AAC9E9"
            android:fontFamily="@font/chelaone"
            android:textSize="25sp"
            android:padding="5dp"
            android:layout_weight="1"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ConvertId"
            android:layout_margin="20dp"
            android:background="@drawable/btn_style"
            android:text="@string/convert1"
            android:textColor="#AAC9E9"
            android:fontFamily="@font/chelaone"
            android:textSize="25sp"
            android:padding="5dp"
            android:layout_weight="1"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ClearId"
            android:layout_margin="20dp"
            android:background="@drawable/btn_style"
            android:text="@string/clear"
            android:textColor="#AAC9E9"
            android:fontFamily="@font/chelaone"
            android:textSize="25sp"
            android:padding="5dp"
            android:layout_weight="1"
            />

    </LinearLayout>


</LinearLayout>